src/main/java/com/example/mbtogether/global/error/ErrorCode.java
package com.example.mbtogether.global.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;
import org.springframework.http.HttpStatus;

import static org.springframework.http.HttpStatus.BAD_REQUEST;

@Getter
@RequiredArgsConstructor
public enum ErrorCode {
    INTERNAL_SERVER_ERROR(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error"),
    INVALID_INPUT_VALUE(BAD_REQUEST, "Invalid Input Value");

    private final HttpStatus httpStatus;
    private final String message;
}
